--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feature PRD Runner Dashboard</title>
+    <title>Agent Orchestrator Dashboard</title>
     <style>
       * {
         margin: 0;
